# check_weekly_analysis_performance

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/result/: m10_w13_b128.csv  m10_w13_b256.csv  m10_w4_b128.csv  m10_w4_b256.csv  m9_w13_b128.csv  m9_w13_b256.csv  m9_w4_b128.csv  m9_w4_b256.csv
notebook/: aggregate_performance.ipynb  make_sample_data.ipynb  sample.csv
src/: make_sample_result.py
