[tool.poetry]
name = "check_weekly_analysis_performance"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.0"
ipykernel = "^6.9.0"
click = "^8.0.3"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
hypothesis = "^6.36.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
